<resources>
    <string name="preference_key_first_launch">first_launch</string>
    <string name="preference_key_campusravita_meals">campusravita_meals</string>
    <string name="preference_key_pirteria_meals">pirteria_meals</string>
    <string name="preference_key_timetable_student_group">student_group</string>
    <string name="preference_key_timetable_period">timetable_period</string>
    <string name="preference_key_timetable_show_weekends">timetable_show_weekends</string>
    <string name="preference_key_menu_show_diets">menu_show_diets</string>
    <string name="preference_key_menu_prices">menu_prices</string>
    <string name="preference_key_show_pirteria_on_english_locale">show_pirteria_on_english_locale</string>


    <bool name="preference_default_show_pirteria_on_english_locale">false</bool>
    <string name="preference_default_timetable_period">one_month</string>
    <string name="preference_default_timetable_student_group" />
    <bool name="preference_default_timetable_show_weekends">true</bool>
    <bool name="preference_default_menu_show_diets">true</bool>


    <string name="app_name">TamkApp</string>

    <string name="settings_action">Settings</string>

    <string name="settings_activity">Settings</string>
    <string name="ready_action">Ready</string>

    <string name="tab_header_timetable">Timetable</string>
    <string name="tab_header_campusravita">Campusravita</string>
    <string name="tab_header_pirteria">Pirteria</string>

    <string name="date_today">Today</string>
    <string name="date_tomorrow">Tomorrow</string>

    <string name="timetable_announcement_block_header">Announcement</string>
    <string name="timetable_block_no_group_title">Welcome to TamkApp!</string>
    <string name="timetable_block_no_group_body">To get started, enter your student group in the settings. You can get to the settings from the menu or by tapping this message.</string>

    <string name="timetable_more_groups">%1$s and %2$d other groups</string>
    <string name="timetable_no_classroom">No classroom</string>
    <string name="timetable_reservation_atm">Just now</string>
    <string name="timetable_no_reservations">No lectures on %1$s</string>

    <string name="error_failed_to_load_menu">Error occurred while loading menu, try again later.</string>
    <string name="error_failed_to_load_timetable">Error occurred while loading timetable, try again later.</string>

    <string name="preference_category_menu">Menu</string>

    <string name="preference_title_campusravita_meals">Meal types: Campusravita</string>
    <string name="preference_title_pirteria_meals">Meal types: Pirteria</string>
    <string name="preference_summary_empty_meals">Not showing any meals</string>
    <string name="preference_summary_selected_meals">Showing: %1$s</string>

    <string name="preference_title_menu_show_diets">Show diets</string>
    <string name="preference_summary_menu_show_diets">Descriptions in restaurant websites</string>

    <string name="preference_category_timetable">Timetable</string>

    <string name="preference_title_timetable_student_group">Student group</string>
    <string name="preference_summary_timetable_student_group">%1$s selected</string>
    <string name="preference_summary_default_timetable_student_group">Enter student group to see your timetable</string>
    <string name="preference_dialog_title_timetable_student_group">Your student group</string>
    <string name="preference_dialog_hint_timetable_student_group">15TIKOOT for example</string>

    <string name="preference_title_timetable_period">Time period</string>

    <string name="preference_title_timetable_show_weekends">Show weekends</string>
    <string name="preference_summary_timetable_show_weekends">Show saturdays and sundays on timetable</string>

    <string name="timetable_block_load_error_title">Something went wrong</string>
    <string name="timetable_block_load_error_body">An error occurred while loading timetable. Check your Internet connection and try again.</string>

    <string name="menulist_error_block_header">Oops</string>
    <string name="menulist_error_block_title">Nothing to see here</string>
    <string name="menulist_error_block_body">There are no meals to display. Try again later!</string>

    <string name="menulist_no_localization_header">Error</string>
    <string name="menulist_no_localization_title">No localization</string>
    <string name="menulist_no_localization_body">This menu is not available in English.\nTo see the menu in Finnish, tap this message.</string>

    <string name="deadline_activity_title">New deadline</string>
    <string name="event_activity_title">New event</string>
    <string name="note_activity_title">New note</string>
    <string name="exam_activity_title">New exam</string>

    <string name="deadline_bottom_sheet_title">Add new deadline</string>
    <string name="event_bottom_sheet_title">Add new event</string>
    <string name="note_bottom_sheet_title">Add new note</string>
    <string name="exam_bottom_sheet_title">Add new exam</string>

    <string name="deadline_activity_input_time_all_day">--:--</string>
    <string name="deadline_activity_dialog_time_all_day">No time</string>
    <string name="note_activity_hint_input_name">Name</string>
    <string name="deadline_activity_action_save">Save</string>
    <string name="note_activity_hint_select_date">Select date</string>
    <string name="note_description"><b>Did you know?</b>\n\nYou can add notes by holding title of a day in the timetable view. Notes can be removed by pressing them for a short time.</string>
    <string name="bottom_sheet_show_reservation_details">Show reservation details</string>
    <string name="note_remove_confirm_title">Remove note</string>
    <string name="note_remove_confirm_button">Remove</string>
    <string name="note_remove_cancel_button">Cancel</string>
    <string name="note_remove_confirm_message">Do you really want to remove note "%1$s"?</string>
    <string name="reservation_details">Reservation details</string>
</resources>
