<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:layout_margin="16dp"
    android:padding="16dp"
    android:elevation="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:text="@string/timetable_announcement_block_header"/>
    <TextView
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="@string/timetable_block_no_group_title"
        android:id="@+id/announcementBlockTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/reservation_date_text"
        android:textColor="@color/colorWhite"
        android:text="@string/timetable_block_no_group_body"
        android:id="@+id/announcementBlockBody"/>
</LinearLayout>