<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.vilik.tamkapp.NoteActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/note_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:hint="@string/note_activity_hint_input_name" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/noteTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <View android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorSecondaryText"
        android:layout_width="match_parent"
        android:layout_marginLeft="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            style="@style/note_picker"
            android:id="@+id/note_input_date"
            android:hint="@string/note_activity_hint_select_date"
            android:onClick="selectDate"
            android:layout_weight="2"
            android:drawableStart="@drawable/ic_event_black_24dp"
            android:drawableLeft="@drawable/ic_event_black_24dp" />
        <EditText
            style="@style/note_picker"
            android:id="@+id/note_input_time"
            android:onClick="selectTime"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_date_black_24dp"
            android:drawableLeft="@drawable/ic_date_black_24dp" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_description"/>

</LinearLayout>
